--- a/src/main/resources/application-integrationtests.properties
+++ b/src/main/resources/application-integrationtests.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:h2:mem:ordersdb
+spring.datasource.url=jdbc:h2:mem:testdb
 spring.jpa.defer-datasource-initialization=true
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=admin
